--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
 <body>
     <!-- Card Bootstrap -->
     <div class="card" style="width: 18rem;">
+      <div class="card-header">
+        <h1>Proj-Git</h1>
+      </div>
+
         <div class="card-body">
-            <h1>Proj-Git</h1>
+          
+            
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div>
