--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
           Some quick example text to build on the card title and make up the
           bulk of the card's content.
         </p>
+
+        <div class="card-footer">
+            <button class="btn btn-primary">Branch</button>
+        </div>
       </div>
     </div>
   </body>
