--- a/index.html
+++ b/index.html
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Title -->
-    <title>Proj-Git</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <!-- Card Bootstrap -->
-    <div class="card" style="width: 18rem">
-      <div class="card-body">
-        <h1>Proj-Git</h1>
-        <img src="https://picsum.photos/200/300" alt="" />
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
-        </p>
+  <!-- Title -->
+  <title>Proj-Git</title>
 
-        <div class="card-footer">
-            <button class="btn btn-primary">Branch</button>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+</head>
+
+<body>
+  <!-- Card Bootstrap -->
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-6">
+        <div class="card" style="width: 18rem">
+          <div class="card-body">
+            <h1>Proj-Git</h1>
+            <img src="https://picsum.photos/200/300" alt="" />
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+
+            <div class="card-footer">
+              <button class="btn btn-primary">Branch</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </body>
+
+  </div>
+
+</body>
+
 </html>
