--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <!-- Card Bootstrap -->
-  <div class="container text-center mx-5">
+  <div class="container text-center my-5">
     <div class="row text-center">
       <div class="col-6">
         <div class="card" style="width: 18rem">
